@@ -1,3 +1,7 @@
+2003-02-11  Caleb Moore <c.moore@student.unsw.edu.au>
+
+	* rsvg-filter.c: added feComposite filter
+	
 2003-02-07  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-styles.[ch]: Implement get_font_size() function
